--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -37,7 +37,7 @@
     <!--Whether to proceed to next module if any test failures exist-->
     <maven.test.failure.ignore>true</maven.test.failure.ignore>
     <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
-    <jetty.version>9.4.53.v20231009</jetty.version>
+    <jetty.version>11.0.24</jetty.version>
     <test.exclude>_</test.exclude>
     <test.exclude.pattern>_</test.exclude.pattern>
 
@@ -109,7 +109,7 @@
     <dnsjava.version>3.6.1</dnsjava.version>
 
     <guava.version>27.0-jre</guava.version>
-    <guice.version>5.1.0</guice.version>
+    <guice.version>7.0.0</guice.version>
 
     <bouncycastle.version>1.78.1</bouncycastle.version>
 
@@ -132,7 +132,7 @@
     <commons-text.version>1.10.0</commons-text.version>
 
     <kerby.version>2.0.3</kerby.version>
-    <ehcache.version>3.8.2</ehcache.version>
+    <ehcache.version>3.10.8</ehcache.version>
     <cache.api.version>1.1.1</cache.api.version>
     <caffeine.version>2.9.3</caffeine.version>
     <hikari.version>4.0.3</hikari.version>
@@ -881,7 +881,7 @@
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty.websocket</groupId>
-        <artifactId>javax-websocket-server-impl</artifactId>
+        <artifactId>websocket-jakarta-server</artifactId>
         <version>${jetty.version}</version>
         <exclusions>
           <exclusion>
@@ -896,7 +896,7 @@
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty.websocket</groupId>
-        <artifactId>websocket-client</artifactId>
+        <artifactId>websocket-jakarta-client</artifactId>
         <version>${jetty.version}</version>
       </dependency>
       <dependency>
@@ -983,11 +983,11 @@
         <version>${guice.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.glassfish.jersey.inject</groupId>
-        <artifactId>jersey-hk2</artifactId>
-        <version>${jersey.version}</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>org.glassfish.jersey.ext</groupId>-->
+<!--        <artifactId>jersey-guice</artifactId>-->
+<!--        <version>${jersey.version}</version>-->
+<!--      </dependency>-->
 
       <dependency>
         <groupId>org.glassfish.jersey.test-framework</groupId>
@@ -2248,11 +2248,6 @@
           <version>${hadoop.version}</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>${maven-dependency-plugin.version}</version>
-        </plugin>
-        <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>yuicompressor-maven-plugin</artifactId>
           <version>${yuicompressor-maven-plugin.version}</version>
@@ -2508,9 +2503,9 @@
                 <bannedDependencies>
                   <excludes>
                     <exclude>cglib:cglib:</exclude>
-                    <exclude>com.sun.jersey:*</exclude>
+                    <exclude>org.glassfish.jersey:*</exclude>
                     <exclude>com.sun.jersey.contribs:*</exclude>
-                    <exclude>com.sun.jersey.jersey-test-framework:*</exclude>
+                    <exclude>org.glassfish.jersey.test-framework:*</exclude>
                     <exclude>com.google.inject:guice</exclude>
                     <exclude>org.ow2.asm:asm</exclude>
 
@@ -2522,16 +2517,13 @@
                     <!-- for JDK 8 support -->
                     <include>cglib:cglib:3.2.0</include>
                     <include>com.google.inject:guice:5.1.0</include>
-                    <include>com.sun.jersey:jersey-core:1.19.4</include>
-                    <include>com.sun.jersey:jersey-servlet:1.19.4</include>
-                    <include>com.github.pjfanning:jersey-json:1.22.0</include>
-                    <include>com.sun.jersey:jersey-server:1.19.4</include>
-                    <include>com.sun.jersey:jersey-client:1.19.4</include>
-                    <include>com.sun.jersey:jersey-grizzly2:1.19.4</include>
-                    <include>com.sun.jersey:jersey-grizzly2-servlet:1.19.4</include>
-                    <include>com.sun.jersey.jersey-test-framework:jersey-test-framework-core:1.19.4</include>
-                    <include>com.sun.jersey.jersey-test-framework:jersey-test-framework-grizzly2:1.19.4</include>
-                    <include>com.sun.jersey.contribs:jersey-guice:1.19.4</include>
+                    <include>org.glassfish.jersey.containers:jersey-container-servlet:${jersey.version}</include>
+                    <include>org.glassfish.jersey.media:jersey-media-json-binding:${jersey.version}</include>
+                    <include>org.glassfish.jersey.core:jersey-server:${jersey.version}</include>
+                    <include>org.glassfish.jersey.core:jersey-client:${jersey.version}</include>
+                    <include>org.glassfish.jersey.test-framework:jersey-test-framework-core:${jersey.version}</include>
+                    <include>org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:${jersey.version}</include>
+                    <include>org.glassfish.jersey.inject:jersey-hk2:${jersey.version}</include>
                     <include>org.ow2.asm:asm:5.0.0</include>
                   </includes>
                 </bannedDependencies>
