fix: enforcer requireSameVersion rule

--- a/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/pom.xml
+++ b/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/pom.xml
@@ -223,6 +223,10 @@
       <artifactId>jackson-jakarta-rs-json-provider</artifactId>
       <version>2.15.4</version>
     </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
